--- a/css/root-styles.css
+++ b/css/root-styles.css
@@ -397,6 +397,7 @@ nav img:nth-child(2){
 #bottom-nav-bar {
     height: 0;
     width: 100%;
+    height: 114% !important;
     position: absolute;
     top: 0;
     right: 0;
@@ -520,7 +521,7 @@ nav img {
 .sub2.drop:before {
     content: '';
     position: absolute;
-    height: 150px;
+    height: 261px;
     width: 2px;
     right: 0;
     top: 55px;
@@ -528,7 +529,7 @@ nav img {
 }
 
 .services-li.drop {
-    height: 250px;
+    height: 350px;
 }
 
 .service-drop-link.drop {
